# Speller

./: CMakeLists.txt  Checker.cpp  Checker.h  README.md  Reader.cpp  Reader.h  main.cpp
DataStructuresToCheck/: BinTreeLeaf.cpp  BinTreeLeaf.h  DataStructure.h  HashTable.cpp  HashTable.h  STDUnorderedMap.cpp  STDUnorderedMap.h  STDVector.cpp  STDVector.h  TrieLeaf.cpp  TrieLeaf.h
error_Words/: bst.txt
